# DevGround-app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRADEMARK.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: tauri.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
src/components/: code-editor.tsx  main-aside.tsx  main-config-modal.tsx  main-screen.tsx  section-block.tsx
src/components/choose-mode/: choose-mode-screen.test.tsx  choose-mode-screen.tsx  mock-code-editor.tsx  playground-option-preview.tsx  sandbox-option-preview.tsx
src/components/console-preview/: console-results.tsx  console.tsx  icon-output.tsx  preview.tsx  (+1 more)
src/constants/: config-types.ts  constants.test.ts  constants.ts  external-settings-handlers.ts  initial-code.ts  initial-config-editor.ts  items-main-config.ts  persist-keys.ts  theme-settings-handlers.ts
src/context/: main-screen.context.tsx
src/hooks/: useBufferedOutput.ts  useCleanupOnUnmount.ts  useHandlerMessages.tsx  useLoadPersistedState.tsx  useOutputResetOnChosenModeChange.ts  useOutputResetOnLayoutChange.ts  useSettingsHandlers.ts  useSyncDocumentFromEditors.ts
src/store/: editors.store.test.ts  editors.store.tsx  layout.store.test.ts  layout.store.tsx  themes.store.tsx
src/test/: setup.ts
src/types/: types.ts
src/utils/: autocomplete-ia-editor.ts  editor-commands.ts  editor-themes.ts  logic-editor.ts  utils.test.ts  utils.ts
(+14 files in other folders)
