[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# El sufijo _lib evita conflictos de nombre en Windows
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri 2 base ---
tauri = { version = "2", features = [] } 
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

# --- JSON / serialización ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Llamadas HTTP (para IA) ---
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Manejo de errores cómodo
anyhow = "1"

# --- Async runtime para reqwest ---
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
